[package]
name = "hetzner_multi_dyn_dns"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
